# AllBeads

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  demo.md  report.csv
.allbeads/hooks/: allbeads.sh
.beads/: .gitignore  issues.jsonl  policies.yaml
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/agents/: onboarding-agent.md  planning-agent.md
.claude-plugin/commands/: agents.md  context-new.md  context.md  create.md  governance.md  handoff.md  mail.md  onboard-repo.md  prime.md  ready.md  show.md  sync.md
.claude-plugin/skills/allbeads/: skill.md
.claude/skills/development/: SKILL.md
.claude/skills/release/: skill.md
.github/workflows/: ci.yml  release.yml
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/agents/: governance-agent.md  onboarding-agent.md  task-agent.md
claude-plugin/commands/: blocked.md  context.md  handoff.md  list.md  onboard-repo.md  project-new.md  scan.md  stats.md  tui.md  workflow.md
crates/beads/: Cargo.toml  README.md
crates/beads/examples/: basic.rs  create_update.rs
crates/beads/src/: lib.rs
docs/: cli-reference.md  core-concepts.md  getting-started.md  index.md  tutorials.md
packaging/homebrew/: allbeads.rb
plans/: 2026-01-16-allbeads-web-platform.md  PLAN-milestones.md  README.md
skills/allbeads/: skill.md
specs/: ARCHITECTURE.md  PRD-00.md  PRD-01-context-onboarding.md  PRD-02-context-new.md  SPEC-aiki-integration.md  SPEC-allbeads-web.md  SPEC-external-integration.md  SPEC-governance.md  SPEC-handoff.md  SPEC-milestones.md  SPEC-onboarding.md  SPEC-sheriff-governance.md  SYNC-STRATEGY.md  _template.md  terraform-provider-registry-spec.md
src/: coding_agent.rs  commands.rs  error.rs  lib.rs  logging.rs  main.rs  plugin.rs  style.rs
src/aggregator/: boss_aggregator.rs  mod.rs
src/auth/: mod.rs
src/boss_board/: mod.rs
src/cache/: mod.rs  sqlite.rs
src/config/: allbeads_config.rs  boss_context.rs  mod.rs  validation.rs
src/context/: folder.rs  mod.rs  status.rs  tracked.rs
src/context_new/: mod.rs
src/git/: mod.rs  operations.rs
src/governance/: agents.rs  checker.rs  config.rs  mod.rs  policy.rs  repo_policy.rs  scanner.rs  storage.rs  usage.rs
src/governance/rules/: cycle_detection.rs  max_in_progress.rs  mod.rs  require_assignee.rs  require_description.rs  require_labels.rs  require_priority.rs
src/graph/: bead.rs  federated_graph.rs  ids.rs  mod.rs  rig.rs  shadow_bead.rs
src/handoff/: config.rs  mod.rs  types.rs
src/integrations/: github.rs  jira.rs  mod.rs  plugin.rs  retry.rs
src/mail/: address.rs  filesystem.rs  locks.rs  message.rs  mod.rs  postmaster.rs  remote.rs  server.rs  transport.rs
src/manifest/: mod.rs  parser.rs
src/onboarding/: mod.rs  repository.rs  wizard.rs  workflow.rs
src/sheriff/: daemon.rs  external_sync.rs  metrics.rs  mod.rs  sync.rs
src/storage/: beads_repo.rs  conversions.rs  jsonl.rs  mod.rs
src/swarm/: agent.rs  manager.rs  mod.rs
src/tui/: aiki_view.rs  app.rs  contexts_view.rs  github_picker_view.rs  governance_view.rs  graph_view.rs  mail_view.rs  mod.rs  stats_view.rs  swarm_view.rs  timeline_view.rs  ui.rs
src/web/: client.rs  mod.rs
tests/: integration_test.rs
