[workspace]
members = [
    ".",
    "crates/beads",
]
resolver = "2"

[package]
name = "allbeads"
version = "0.1.0"
edition = "2021"
authors = ["AllBeads Contributors"]
license = "MIT"
description = "Distributed protocol for agentic orchestration and communication"
repository = "https://github.com/thrashr888/AllBeads"
readme = "README.md"
keywords = ["ai", "agents", "beads", "orchestration", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Beads CLI wrapper
beads = { path = "crates/beads" }

# Async runtime
tokio = { version = "1.45", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Git operations
git2 = "0.19"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.13"
