[workspace]
members = [".", "crates/beads"]
resolver = "2"

[package]
name = "allbeads"
version = "0.8.0"
edition = "2021"
authors = ["AllBeads Contributors"]
license = "MIT"
description = "Distributed protocol for agentic orchestration and communication"
repository = "https://github.com/thrashr888/AllBeads"
readme = "README.md"
keywords = ["ai", "agents", "beads", "orchestration", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Beads CLI wrapper
beads = { path = "crates/beads" }

# Future considerations:
# https://docs.rs/gouqi/latest/gouqi/
# https://github.com/XAMPPRocky/octocrab

# Async runtime
tokio = { version = "1.45", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Git operations (vendored for cross-compilation)
git2 = { version = "0.19", features = ["vendored-openssl"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client (use rustls for cross-compilation)
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Async traits
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# File system utilities
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_repr = "0.1.20"
axum = { version = "0.8.8", features = ["tokio"] }
tower = "0.5.2"
hyper-util = "0.1.19"
quick-xml = "0.38.4"
glob = "0.3.3"
dialoguer = "0.12.0"
toml = "0.9.11"
futures = "0.3.31"
urlencoding = "2.1.3"
open = "5.3"

[dev-dependencies]
tempfile = "3.13"
